--- a/crates/wx-payload/Cargo.toml
+++ b/crates/wx-payload/Cargo.toml
@@ -14,3 +14,4 @@ log = "0.4.20"
 sysinfo = "0.30.5"
 windows = { version = "0.52.0", features = ["Win32_Foundation"] }
 simplelog = "0.12.1"
+widestring = "1.0.2"
