--- a/crates/wx-payload/Cargo.toml
+++ b/crates/wx-payload/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-injectors = { path = "D:\\repos\\injectors" }
+injectors = { version = "0.1.3"}
 log = "0.4.20"
 sysinfo = "0.30.5"
 windows = { version = "0.52.0", features = ["Win32_Foundation"] }
